--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,18 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Welcome to #[em Grocery Inventory].
+
+  h1 Dynamic Content 
+
+  if error
+    p Error getting dynamic content.
+  else
+    p The Grocery Inventory has the following record counts: 
+
+    ul 
+      li #[strong Stores:] !{data.store_count}
+      li #[strong Farms:] !{data.farm_count}
+      li #[strong Foods:] !{data.food_count}
+      li #[strong Food Items:] !{data.food_item_count}
+      li #[strong Food Groups:] !{data.food_group_count}
