--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,41 @@
 doctype html
-html
+html(lang='en')
   head
     title= title
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width', initial-scale='1')
+    link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css', integrity=integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z", crossorigin="anonymous")
+    script(src="https://code.jquery.com/jquery-3.5.1.slim.min.js", integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj", crossorigin="anonymous")
+    script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js", integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV", crossorigin="anonymous")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block content
+    div(class='container-fluid')
+      div(class='row')
+        div(class='col-sm-2')
+          block sidebar 
+            ul(class="sidebar-nav")
+              li
+                a(href='/catalog') Home
+              li
+                a(href='/catalog/stores') All Stores
+              li
+                a(href='/catalog/farms') All Farms
+              li
+                a(href='/catalog/food') All Food
+              li
+                a(href='/catalog/fooditems') All Food Items
+              li
+                a(href='/catalog/foodgroups') All Food Groups
+              hr
+              li
+                a(href='/catalog/store/create') Create New Store
+              li
+                a(href='/catalog/farm/create') Create New Farm
+              li
+                a(href='/catalog/food/create') Create New Food
+              li
+                a(href='/catalog/fooditem/create') Create New Food Item
+              li
+                a(href='/catalog/foodgroup/create') Create New Food Group
+        div(class='col-sm-10')
+          block content
