--- a/views/store_form.pug
+++ b/views/store_form.pug
@@ -18,10 +18,10 @@ block content
             input#manager.form-control(type='date' name='start_date', required=true value=(undefined===store ? '' : store.start_date))
         .form-group 
             label(for='start_date', style='display:block') Inventory:
-            each item in foodItems  
+            each food in foods  
                 div(style='display: inline; padding-right:10px;')
-                    input.checkbox-input(type='checkbox', name='food_item', id=item._id, value=item._id, checked=item.checked )
-                    label(for=item._id) #{item.food.name} - #{item.item_id}
+                    input.checkbox-input(type='checkbox', name='food', id=food._id, value=food._id, checked=food.checked )
+                    label(for=food._id) #{food.name}
         button.btn.btn-primary(type='submit') Submit
 
     if errors 
