Fix foods URL bug

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,7 +21,7 @@ html(lang='en')
               li
                 a(href='/catalog/farms') All Farms
               li
-                a(href='/catalog/food') All Food
+                a(href='/catalog/foods') All Food
               li
                 a(href='/catalog/foodgroups') All Food Groups
               hr
