--- a/views/food_group_form.pug
+++ b/views/food_group_form.pug
@@ -6,7 +6,7 @@ block content
     form(method='POST' action='')
         .form-group
             label(for='name') Store Name: 
-            input#name.form-control(type='text' placeholder='Food Group Name' name='name', required=true value=(undefined===store ? '' : foodGroup.name))
+            input#name.form-control(type='text' placeholder='Food Group Name' name='name', required=true value=(undefined===foodGroup ? '' : foodGroup.name))
         button.btn.btn-primary(type='submit') Submit
     if errors 
         ul 
