Implement food delete view

--- a/views/farm_detail.pug
+++ b/views/farm_detail.pug
@@ -18,6 +18,6 @@ block content
 
     hr
     p
-        a(href=farm.url+'/update') Update Store
+        a(href=farm.url+'/update') Update Farm
     p
-        a(href=farm.url+'/delete') Delete Store
+        a(href=farm.url+'/delete') Delete Farm
