--- a/views/food_detail.pug
+++ b/views/food_detail.pug
@@ -8,6 +8,6 @@ block content
 
     hr
     p
-        a(href=food.url+'/update') Update Store
+        a(href=food.url+'/update') Update Food
     p
-        a(href=food.url+'/delete') Delete Store
+        a(href=food.url+'/delete') Delete Food
