--- a/views/food_group_detail.pug
+++ b/views/food_group_detail.pug
@@ -5,6 +5,6 @@ block content
 
     hr
     p
-        a(href=foodGroup.url+'/update') Update Store
+        a(href=foodGroup.url+'/update') Update Food Group
     p
-        a(href=foodGroup.url+'/delete') Delete Store
+        a(href=foodGroup.url+'/delete') Delete Food Group
